<resources>
    <string name="app_name">EquipLogistics</string>
    <string name="welcome">Welcome back!</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="telephone">Telephone</string>
    <string name="confirm_password">Confirm password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>